# slma_nav

./: .gitignore  frames.gv  mq_interface.md  start_web.sh
.claude/: settings.local.json
SC-FAST-LIO-main/: README.md  start_slam.sh
SC-FAST-LIO-main/.claude/: settings.local.json
SC-FAST-LIO-main/src/SC_FAST_LIO/: CMakeLists.txt
SC-FAST-LIO-main/src/SC_FAST_LIO/Log/: mat_pre.txt
SC-FAST-LIO-main/src/SC_FAST_LIO/config/: mid360.yaml
SC-FAST-LIO-main/src/SC_FAST_LIO/include/: Scancontext.h
SC-FAST-LIO-main/src/SC_FAST_LIO/launch/: mapping_mid360.launch  mapping_velodyne.launch
SC-FAST-LIO-main/src/SC_FAST_LIO/rviz_cfg/: loam_livox.rviz
SC-FAST-LIO-main/src/SC_FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp  loop.cpp  preprocess.cpp  preprocess.h
SC-FAST-LIO-main/src/livox_ros_driver/: CMakeLists.txt
go2_SDK_ws/: go2_cmd_vel.sh
go2_SDK_ws/src/unitree_sdk2-main/: CMakeLists.txt  package.xml
go2_SDK_ws/src/unitree_sdk2-main/example/go2/: CMakeLists.txt  go2_cmd_vel.cpp
go2_SDK_ws/src/unitree_sdk2-main/launch/: go2_cmd_vel.launch
lite_cog/: .gitignore  CHANGELOG.md  install_dependencies.sh
lite_cog/drivers/Livox-SDK2/include/: livox_lidar_def.h
lite_cog/drivers/Livox-SDK2/sdk_core/: device_manager.cpp  params_check.cpp  parse_cfg_file.cpp
lite_cog/drivers/leishen_ws/src/: README.md  README_en.md
lite_cog/nav/: CRASH_DIAGNOSIS.md  frames.gv
lite_cog/nav/src/fast_gicp/: CMakeLists.txt
lite_cog/nav/src/hdl_global_localization/: CMakeLists.txt
lite_cog/nav/src/hdl_localization/: CMakeLists.txt
lite_cog/nav/src/navigation/: CMakeLists.txt  package.xml
lite_cog/nav/src/navigation/config/: common_costmap_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
lite_cog/nav/src/navigation/launch/: navigation.launch
lite_cog/nav/src/ndt_omp/: CMakeLists.txt
lite_cog/others/football/: hsv.py  save.py
lite_cog/others/football/src/football/: CMakeLists.txt  README.md  package.xml
lite_cog/others/football/src/football/include/: BallDetector.h  BallState.h  GStreamerWrapper.hpp
lite_cog/others/football/src/football/launch/: football.launch
lite_cog/others/football/src/football/msg/: circle.msg
lite_cog/others/football/src/football/src/: BallDetector.cpp  ControlBall.cpp  DetectBall.cpp
lite_cog/slam/src/: CMakeLists.txt
lite_cog/slam/src/pcd2grid/: CMakeLists.txt  package.xml
lite_cog/slam/src/pcd2grid/launch/: direct_pcd2grid.launch  pcd2grid.launch
lite_cog/slam/src/pcd2grid/rviz/: config.rviz
lite_cog/slam/src/pcd2grid/src/: pcd2grid_node.cpp
lite_cog/system/: convert_pcd.sh
lite_cog/system/map/: analyze_scans.py  compare_leveled_2d.py  current.yaml  diagnose_z_drift.py  level_and_viz.py  local_ground_level.py  view_leveled_3d.py  visualize_pcd_filter_o3d.py  visualize_pcd_filter_vedo.py  visualize_z_range.py  visualize_z_range_2d.py  viz_current_filter.py
lite_cog/system/map/01/: 01.yaml
lite_cog/system/tools/: build_visualize_pcd_filter.sh  level_pcd  level_pcd.cpp  visualize_pcd_filter  visualize_pcd_filter.cpp
lite_cog/track/model/: export_engine.sh
lite_cog/track/src/: run_tracker.py
lite_cog/voa/: .gitignore
lite_cog/voa/src/: README.md  RUN.md  config.cmake  version
lite_cog/voa/src/deeprobotics_local_height_map/: CMakeLists.txt  package.xml
lite_cog/voa/src/deeprobotics_local_height_map/config/: analyze_l_h_hei.yaml  analyze_l_h_safe.yaml  analyze_mini_h_hei.yaml  analyze_mini_h_safe.yaml  analyze_mini_v_hei.yaml  analyze_mini_v_safe.yaml  control_l_h.yaml  control_mini_h.yaml  control_mini_v.yaml  control_x20.yaml  input_camera_h.yaml  input_camera_v.yaml  input_pose_hei.yaml  input_pose_safe.yaml  map_common_setting.yaml  map_filter_0.yaml  map_filter_1.yaml  param_all_assist_h.yaml  param_all_assist_v.yaml  param_all_camera_h.yaml  param_all_camera_h_safety.yaml  param_all_camera_v.yaml  param_all_camera_v_safety.yaml  param_vel_control.yaml  safety.yaml  setting.conf
lite_cog/voa/src/deeprobotics_local_height_map/config/elevation_maps/: remove_object.yaml
lite_cog/voa/src/deeprobotics_local_height_map/launch/: app_height_map_x20.launch  app_map_trans.launch  height_map_lite.launch  height_map_mini.launch  height_map_safety.launch  height_map_x20.launch  log.launch  rviz.launch  safety.launch  two_height_map_safety.launch  x20_camera_tf.launch
lite_cog/voa/src/deeprobotics_local_height_map/rviz/: height_map_camera.rviz  safety_control_assist.rviz
lite_cog/voa/src/models/Lite3/: CMakeLists.txt  package.xml
lite_cog/voa/src/models/Lite3/Lite3/: Lite3.urdf
ros_web_gui_app/: .env  .env.example  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ros_web_gui_app/.github/workflows/: build.yaml  ci.yml  lint.yaml  release.yml  test.yaml
ros_web_gui_app/gateway/: .env  .env.example  package-lock.json  package.json  tsconfig.json
ros_web_gui_app/gateway/config/: default_map.yaml
ros_web_gui_app/gateway/data/: nav_web.sqlite  nav_web.sqlite-shm  nav_web.sqlite-wal
ros_web_gui_app/gateway/src/: auth.ts  db.ts  index.ts  rosAdapter.ts  state.ts  types.ts
ros_web_gui_app/scripts/: dev.sh
ros_web_gui_app/src/: App.css  App.tsx  index.css
ros_web_gui_app/src/api/: gatewayApi.ts
ros_web_gui_app/src/components/: ConnectionPage.css  ConnectionPage.tsx  LayerSettingsPanel.css  LayerSettingsPanel.tsx  MapEditor.GatewaySave.tsx  MapEditor.css  MapEditor.tsx  MapView.css  MapView.tsx  NavParamsPanel.tsx  TopoPointInfoPanel.tsx
ros_web_gui_app/src/constants/: layerConfigs.ts
ros_web_gui_app/src/hooks/: useConnectionInit.ts  useGateway.ts  useGatewaySceneSync.ts  useInitialization.ts  useLayerConfigSync.ts  useRelocalizeMode.ts  useViewMode.ts
ros_web_gui_app/src/types/: GatewayTypes.ts
ros_web_gui_app/src/utils/: CommandManager.ts  MapManager.ts  RosbridgeConnection.ts  connectionPreferences.ts  mapDownsample.ts  mapExporter.ts  mapImporter.ts  mapTextureCache.ts  tf2js.ts  urdfFileStorage.ts  urdfStorage.ts
test_plan/: 验收测试安排.md
(+324 files in other folders)
