<?xml version="1.0"?>
<package >
    <name>pcd2grid</name>
    <version>0.0.0</version>
    <description>The pcd2grid package</description>
    <maintainer email="he@todo.todo">he</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
