<package>
  <name>lite3</name>
  <version>1.0.0</version>
  <description>
      The deeprobotics_robots package
  </description>
  <maintainer email="zhangjixiang@deeprobotics.cn">DeepRobotics Co.Ltd</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>gazebo</build_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
</package>
